solve the character wrap problem

--- a/calculate/cal.less
+++ b/calculate/cal.less
@@ -10,7 +10,11 @@
   justify-content: center;
   align-items: center;
 }
-
+.right() {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
 body, html {
   height: 100%;
   width: 100%;
@@ -22,6 +26,7 @@ body {
   margin: 0;
   background: linear-gradient(to bottom, @bg1-color, @bg2-color);
   overflow: hidden;
+  font-weight: lighter;
   .center;
   &:before {
     content: "";
@@ -48,13 +53,37 @@ body {
   background: @calBg-color;
   box-shadow: @shadow;
   border-radius: 10px;
+  cursor: pointer;
   div:not(#display) {
     .center;
     font-size: 26px;
     text-align: center;
   }
   #display {
+    position: relative;
     grid-area: ~"1 / 1 / 1 / 5 ";
+    overflow: hidden;
+    font-size: 36px;
+    #content {
+      width: 100%;
+      padding: 0 10%;
+      position: absolute;
+      left: 0;
+      text-align: right;
+      font-size: 24px;
+      .right;
+      transition: bottom 0.4s ease;
+    }
+    #first-line {
+      position: absolute;
+      padding: 0 10%;
+      bottom: 0;
+      text-align: right;
+      font-size: 50px;
+      width: 100%;
+      .right;
+      transition: all 0.3s ease;
+    }
   }
   #equal {
     position: relative;
